feat: configure server to connect with db

--- a/Tribelog/appsettings.Development.json
+++ b/Tribelog/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tribelog;Username=postgres;Password=dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
