--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -20,6 +20,8 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=admin
+    volumes:
+      - ./Tribelog/docker/pgadmin/servers.json:/pgadmin4/servers.json
     networks:
       - backend
 
